Fix centering on mobile

--- a/index.css
+++ b/index.css
@@ -4,6 +4,10 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+h1, h2, h3, p {
+    text-align: center;
+}
+
 .container {
     width: 100%;
     display: flex;
